--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -5,7 +5,9 @@
                 <app-progresso></app-progresso>
             </div>
             <div class="col-sm-6">
-                <app-tentativas></app-tentativas>
+                <div class="d-flex justify-content-end">
+                    <app-tentativas></app-tentativas>
+                </div>
             </div>
         </div>
 
@@ -13,16 +15,17 @@
             <div class="col-sm-6">
                 <h6>Traduza a frase:</h6>
                 <p>How are you ?</p>
+
                 <div class="form-floating">
-                    <textarea class="form-control" rows="3" ></textarea>
+                    <textarea class="form-control" rows="10"></textarea>
                 </div>
-                <br>
-                <div class="row">
-                    <div class="col">
-                        <div class="d-flex justify-content-end">
-                            <button type="button" class="btn btn-primary">Verificar</button>
-                        </div>
-                    </div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="cow">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary">Check</button>
                 </div>
             </div>
         </div>
