--- a/src/app/painel/painel.component.css
+++ b/src/app/painel/painel.component.css
@@ -6,5 +6,11 @@
     margin-top: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
+    margin: 30px;
+    
 
+}
+.btn {
+    margin-top: 20px;
+    margin-right: 20px;
 }
