--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -13,13 +13,11 @@
 
         <div class="row">
             <div class="col-sm-6">
-                <h6>Traduza a frase:</h6>
-                <p>How are you ?</p>
-
-                <div class="form-floating">
-                    <textarea class="form-control" rows="10"></textarea>
-                </div>
-
+                <h6>{{ instruction }}</h6>
+                <p>{{ frases[0].fraseEng }}</p>
+            </div>
+            <div class="form-floating">
+                <textarea class="form-control" rows="10" (input) = "atualizaResposta()"></textarea>
             </div>
         </div>
         <div class="row">
